Fix clickable invisible navigaiton links

--- a/css/style.css
+++ b/css/style.css
@@ -930,7 +930,8 @@ body {
   text-transform: uppercase;
   background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
   background-size: 230%;
-  transition: all .4s; }
+  transition: all .4s;
+  visibility: hidden; }
   .navigation__link:link span, .navigation__link:visited span {
     margin-right: 1.5rem;
     display: inline-block; }
@@ -946,6 +947,9 @@ body {
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
   width: 100%; }
+
+.navigation__checkbox:checked ~ .navigation__nav .navigation__link:link, .navigation__checkbox:checked ~ .navigation__nav .navigation__link:visited {
+  visibility: visible; }
 
 .navigation__icon {
   position: relative;
