--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -85,6 +85,7 @@
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
             background-size: 230%; // Extra large so it is to the right of the link
             transition: all .4s;
+            visibility: hidden;
 
             span {
                 margin-right: 1.5rem;
@@ -108,6 +109,13 @@
     &__checkbox:checked ~ &__nav {
         opacity: 1;
         width: 100%;
+    }
+
+    &__checkbox:checked ~ &__nav &__link {
+        &:link,
+        &:visited {
+            visibility: visible;
+        }
     }
 
     // ICON
